--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.5"
+    "moment": "^2.24.0",
+    "mongoose": "^5.8.5",
+    "nodemailer": "^6.4.2",
+    "stripe": "^8.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
